@@ -18,6 +18,7 @@ cgrates (0.11.0~dev) UNRELEASED; urgency=medium
     path
   * [AgentRequest] Add support for *tmp path
   * [SessionS] Add new API SessionSv1.GetCost
+  * [SessionS] Add support for *cdrs flag in SessionSv1.ProcessEvent
 
  -- Alexandru Tripon <alexandru.tripon@itsyscom.com>  Wed, 19 Feb 2020 13:25:52 +0200
 
